# 8V42_Kiegechev_TXI_Cours

./: CMakeLists.txt
qml/: main.qml
src/: aiplayer.cpp  aiplayer.h  board.cpp  board.h  gamecontroller.cpp  gamecontroller.h  gamewindow.cpp  gamewindow.h  main.cpp  move.cpp  move.h  movehistory.cpp  movehistory.h  piece.cpp  piece.h  position.h
